# smart-ai-router

./: .env.example  .gitignore  ARCHITECTURE_OPTIMIZATION_REPORT.md  BUILD.md  CHANNEL_PRICING_ANALYSIS.md  CLAUDE.md  CODE_AUDIT_REPORT.md  COMPREHENSIVE_PROJECT_EVALUATION.md  CONFIGURATION.md  DEVELOPMENT_SUMMARY.md  Dockerfile  Dockerfile.cn  FINAL_PERFORMANCE_REPORT.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION_REPORT_PHASE9.md  PERSONAL_COST_OPTIMIZATION_ANALYSIS.md  PROJECT_EVALUATION_REPORT.md  README.md  REQUIREMENTS_TAG_ROUTING_ENHANCEMENT.md  SECURITY_REPORT.md  TODO.md  check_cache_loading.py  check_db.py  docker-compose.cn.yml  docker-compose.yml  main.py  main_original_backup.py  main_refactored.py  performance_diagnosis.py  pyproject.toml  rebuildandrun.ps1  rebuildandrun.sh  recover_models_cache.py  refresh_models.py  requirements.txt  test_negative_local_only.json  test_negative_tags.json  test_optimizations.py  test_vision.json
.github/workflows/: ci.yml
api/: admin.py  admin_blacklist.py  anthropic.py  chat.py  chatgpt.py  gemini.py  health.py  management.py  models.py  status_monitor.py  token_estimation.py  usage_stats.py
api/admin/: audit.py  logs.py  siliconflow.py
api/admin_modules/: __init__.py  audit.py  logs.py  siliconflow.py
api/v1/: router_integration.py
config/: README.md  example.yaml  model_capabilities.json  model_groups.yaml  pricing_policies.yaml  providers.yaml  router_config.yaml.template  system.yaml
config/pricing/: base_pricing_unified.json  doubao_unified.json  openrouter_unified.json  siliconflow_pricing_from_html.json  siliconflow_unified.json
core/: __init__.py  auth.py  config_loader.py  config_models.py  database.py  exceptions.py  json_router.py  json_router_legacy.py  routing_models.py  yaml_config.py
core/auth/: __init__.py  middleware.py  token_generator.py
core/config/: __init__.py  async_loader.py
core/exceptions/: __init__.py  base_exceptions.py  error_codes.py  error_handler.py
core/handlers/: __init__.py  chat_handler.py
core/manager/: __init__.py  channel_manager.py
core/middleware/: __init__.py  audit.py  exception_middleware.py  logging.py
core/models/: __init__.py  api_key.py  base.py  channel.py  chat_request.py  model_group.py  model_info.py  provider.py  request_log.py  stats.py  virtual_model.py
core/pricing/: format_converters.py  unified_format.py
core/providers/: __init__.py  base.py  registry.py
core/providers/adapters/: __init__.py  anthropic.py  groq.py  openai.py  openrouter.py  siliconflow.py
core/router/: __init__.py  base.py  size_filters.py  types.py
core/router/mixins/: __init__.py  candidate.py  parameter.py  scoring.py  tag.py
core/router/strategies/: __init__.py  cost_optimized.py  multi_layer.py  speed_optimized.py
core/routing/: __init__.py  candidate_finder.py  channel_scorer.py  exceptions.py  filters.py  json_router_refactored.py  models.py  router.py  size_filters.py
core/scheduler/: __init__.py  scheduler.py  task_manager.py
core/scheduler/tasks/: __init__.py  doubao_pricing_fixed.py  model_discovery.py  official_pricing.py  pricing_discovery.py  pricing_extractor.py  service_health_check.py  siliconflow_pricing.py
core/services/: __init__.py  cache_service.py  config_service.py  model_service.py  router_service.py  scoring.py  tag_processor.py
core/utils/: __init__.py  adapter_manager.py  api_key_cache.py  api_key_cache_manager.py  api_key_validator.py  async_file_ops.py  audit_analyzer.py  audit_logger.py  auth.py  batch_scorer.py  blacklist_recovery.py  capability_mapper.py  capability_mapper_new.py  channel_cache_manager.py  channel_monitor.py  config.py  cost_estimator.py  exception_handler.py  factory.py  http_client_pool.py  legacy_adapters.py  local_detector.py  local_model_capabilities.py  log_analyzer.py  logger.py  logging_integration.py  memory_index.py  model_analyzer.py  model_capabilities.py  model_channel_blacklist.py  null_safety.py  openrouter_loader.py  parameter_comparator.py  query_preloader.py  request_cache.py  request_interval_manager.py  response_aggregator.py  session_manager.py  smart_cache.py  smart_logging.py  (+8 more)
docs/: AIROUTER_INTEGRATION_PLAN.md  ANTHROPIC_CLAUDE_API.md  CODE_MODIFICATION_EVALUATION_REPORT.md  CODE_REVIEW_REPORT.md  COST_MONITORING.md  IMPLEMENTATION_COMPLETION_REPORT.md  IMPLEMENTATION_REPORT.md  LEGACY.md  MULTI_API_COMPATIBILITY.md  Model-Specific-Channel-Blacklisting-Enhancement.md  PROJECT_STRUCTURE.md  README.docker.cn.md  Rust重写实施方案.md  SECURITY_REPORT.md  SiliconFlow定价系统使用说明.md  TROUBLESHOOTING.md  TROUBLESHOOTING_CHECKLIST.md  api-key-level-caching-design.md  api-key-level-caching-implementation-summary.md  api.md  architecture.md  build.md  code-quality-optimization.md  deployment.md  development.md  doubao_pricing_system.md  hierarchical-routing-priorities.md  model-candidate-selection-flow.md  model-filtering-logic-comprehensive.md  multimodal_capability_detection.md  performance_rewrite_evaluation_zh.md  request-level-caching.md  response-output-design.md  session-requirements-checklist.md  多平台兼容代理 API 设计规范.md  硅基流动（SiliconFlow）的大语言模型报价信息和参数.md  豆包大模型价格参数汇总表.md
docs/archive/: README.md
docs/migration/: CONFIG_MIGRATION.md  MIGRATION_PLAN.md
examples/: anthropic_usage_example.py  cost_tracking_example.py  token_estimation_example.py
migrations/: env.py
scripts/: README_LOCAL_CI.md  api_test.sh  archive_usage_logs.py  convert_pricing_units.py  diagnostic_tool.py  diagnostic_tool_simple.py  generate_base_pricing.py  import_oneapi_channels.py  init_db.py  local_ci_check.bat  local_ci_check.py  local_ci_check.sh  migrate_cache.py  parse_siliconflow_fixed.py  parse_siliconflow_unified.py  performance_test.py  pricing_refactor_summary.py  professional_api_test.py  quick_check.py  realistic_benchmark.py  simple_db_test.py  test_db.py  unified_api_test.py
templates/: status_monitor.html
tests/: README.md  test_basic.py  test_config.py  test_core_modules.py  test_functionality.py  test_logger.py  test_phase1.py
(+8 files in other folders)
