[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-ai-router"
version = "0.1.0"
description = "轻量化个人AI智能路由系统 - 成本优化、智能路由、故障转移"
authors = [
    {name = "Smart AI Router Team"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["ai", "llm", "router", "cost-optimization", "gateway"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx[http2]>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "structlog>=23.0.0",
    "python-json-logger>=2.0.0",
    "aiofiles>=23.2.0",
    "tiktoken>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "psutil>=7.0.0",
    "jinja2>=3.1.6",
    "types-requests>=2.32.4.20250913",
    "ruff>=0.12.8",
    "types-aiofiles>=24.1.0.20250822",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
]
web = [
    "jinja2>=3.1.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/your-username/smart-ai-router"
Documentation = "https://github.com/your-username/smart-ai-router/docs"
Repository = "https://github.com/your-username/smart-ai-router"
Issues = "https://github.com/your-username/smart-ai-router/issues"

[project.scripts]
smart-ai-router = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "api", "web"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
# 务实开发模式 - 专注关键错误和安全问题
select = [
    "E",  # pycodestyle errors (基础语法)
    "W",  # pycodestyle warnings (潜在问题)
    "F",  # pyflakes (未定义变量、未使用导入)
    "I",  # isort (导入排序)
    "B",  # flake8-bugbear (常见错误)
]
ignore = [
    "E501",  # line too long, handled by black
    "E203",  # whitespace before ':' (black冲突)
    "B008",  # do not perform function calls in argument defaults
    "F402",  # import shadowed by loop variable
    "F841",  # local variable assigned but never used
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"examples/*" = ["F401", "F841", "E402"]  # 示例文件允许更宽松的规则

[tool.mypy]
python_version = "3.9"
# 个人项目务实模式 - 最大宽松度，专注开发效率
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_errors = true  # 仅用于语法检查，不阻塞CI

[[tool.mypy.overrides]]
module = [
    "yaml.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow tests",
]

